Align the class names for all three demos, remove separate launcher (#96)